--- a/main.html
+++ b/main.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <title>Basic HTML Table</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <table>
+        <thead>
+            <tr>
+                <th>Roll number</th>
+                <th>Name</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>101</td>
+                <td>John Doe</td>
+            </tr>
+            <tr>
+                <td>102</td>
+                <td>Jane Smith</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
-
 </html>
+
